Added p tag about kevin

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <h1>Look at the console</h1>
 
+  <p>Kevin, if you're reading this, you are a butt.</p>
+
   <script src="script.js"></script>
 </body>
 
